All table rankings done

--- a/src/index.html
+++ b/src/index.html
@@ -22,19 +22,7 @@
   <body>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
     <div class="container">
-      <div class="row">
-        <div class="col-10 col-sm-4 col-md-5">
-          <small-driver-card name="Lewis "></small-driver-card>
-
-
-        </div>
-        <div class="col-7 col-sm-7 col-md-6">
-            <driver-card-all-races></driver-card-all-races>
-
-
-        </div>
-
-      </div>
+      <driver-card-ranking-races></driver-card-ranking-races>
     </div>
 
     <script
